--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<h1><br>─── ♡ ───<br><br><br>HAPPY 17TH BIRTHDAY MIKA! <br><br>  I’m so grateful we got closer this year. Your wisdom is unmatched, and I’m very thankful for all your support and advice this year. Enjoy this little game I made for you. 
+	<h1><br>─── ♡ ───<br><br><br>HAPPY 17TH BIRTHDAY MIKA! <br><br>  I’m so grateful we got closer this year. Your wisdom is unmatched, and I’m very thankful for all your support and advice. Enjoy this little game I made for you. 
         <br><br>Love,  Anaika <br><br><a href="https://anaikaw.github.io/mika2048/">
             <button style="background-color: palegoldenrod; color: black;">the game</button>
         </a><br><br>─── ♡ ───</h1>
