--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: honeydew;">
 
 <head>
         <style>
@@ -13,7 +13,7 @@
 <body>
 	<h1><br>─── ♡ ───<br><br><br>HAPPY 17TH BIRTHDAY MIKA! <br><br>  I’m so grateful we got closer this year. Your wisdom is unmatched, and I’m very thankful for all your support and advice. Enjoy these little games I made for you. 
         <br><br>Love,  Anaika <br><br><a href="https://anaikaw.github.io/mika2048/">
-            <button style="background-color: mediumseagreen; color: black;"> 2048 </button></a><br><br><a href="https://anaikaw.github.io/watermelon/"><button style="background-color: mediumseagreen; color: black;"> merge fruit </button></a>
+            <button style="background-color: lightgreen; color: black;"> 2048 </button></a><br><br><a href="https://anaikaw.github.io/watermelon/"><button style="background-color: lightgreen; color: black;"> merge fruit </button></a>
         </a><br><br>─── ♡ ───</h1>
    
 </body>
